<resources>
    <string name="app_name">Online Electronic Gadget</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_link">Do not have an account? Register here</string>
    <string name="login_link">Already have an account? Login here</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="account_circle">Account</string>
    <string name="shopping_cart">Cart</string>
    <string name="search_bar">Search</string>
    <string name="home_option">Home</string>
    <string name="tab_details">Tab Details</string>
    <string name="product_desc">Product Description goes here. This is a detailed description of the product, its features, and benefits.</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">₹0.0</string>
    <string name="product_images">Product Images</string>
    <string name="search_here">Search here!</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="next_button_desc">Next Button</string>
    <string name="prev_button_desc">Prev Button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laptop">Laptop</string>
    <string name="tablet">Tablet</string>
    <string name="connectivity">Connectivity</string>
    <string name="tv_details">Smart TV Details</string>
    <string name="screen_size">Screen Size</string>
    <string name="resolution">Resolution</string>
    <string name="sound">Sound</string>
    <string name="sensor">Sensor</string>
    <string name="watch_weight">Weight (g)</string>
    <string name="water_resistance">Water Resistance</string>
    <string name="smart_features">Smart Features</string>
    <string name="display_technology">Display Technology</string>
    <string name="watch">Watch</string>
    <string name="spec">Specification</string>
    <string name="watch_details">Smart Watch Details</string>
    <string name="product_brand">Product Brand</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="stocks">Stocks</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="ram">Ram</string>
    <string name="storage">Storage</string>
    <string name="display">Display</string>
    <string name="ports">Ports</string>
    <string name="color">Color</string>
    <string name="warranty">Warranty</string>
    <string name="dimension">Dimension</string>
    <string name="laptop_weight">Weight (in KG)</string>
    <string name="os">Operating System</string>
    <string name="batteryLife">Battery Life</string>
    <string name="camera">Camera</string>
    <string name="processor">Processor</string>
    <string name="laptop_details">Laptop Details</string>
    <string name="tv">Tv</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="customer">Customer</string>
    <string name="retailer">Retailer</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="delete_acc">Delete Account</string>
    <string name="log_out">Log out</string>
    <string name="about_us">About us</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send_us_message">Send us a message</string>
    <string name="review">Give your honest review here!</string>
    <string name="empty_cart_message">Empty cart!</string>
    <string name="browse_products">Browse new products</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="remove">Remove</string>
    <string name="binary_bazaar">Binary Bazaar</string>
    <string name="edit_product">Edit Product</string>
    <string name="place_order">Place Order</string>
    <string name="orders">Orders</string>
    <string name="date">Date</string>
    <string name="empty_order_message">You dont order any product yet!</string>
</resources>