<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/product_images"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_foreground" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/prevButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/prev_button_desc"
                    app:srcCompat="@drawable/arrow_back_24px" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/next_button_desc"
                    app:srcCompat="@drawable/arrow_forward_24px" />

            </RelativeLayout>

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/product_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/product_price"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/product_desc"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:background="@android:color/white"
        android:elevation="4dp">

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_to_cart"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buyNowButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/addToCartButton"
            android:layout_toRightOf="@id/addToCartButton"
            android:layout_centerVertical="true"
            android:text="@string/buy_now"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>
