<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_login_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:textSize="24sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                style="@style/ThemeOverlay.Material3.TextInputEditText"
                android:drawableLeft="@drawable/mail_24px"
                android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:textSize="24sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:drawableStart="@drawable/lock_24px"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:textColor="@color/white"
        android:clickable="true"
        android:layout_marginTop="24dp"
        android:layout_gravity="center" />

</LinearLayout>